added new posts, trying FB comments

--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : facebook
     disqus :
       short_name : lemez
     livefyre :
@@ -125,7 +125,7 @@ JB :
     intensedebate :
       account : 123abc
     facebook :
-      appid : 123
+      appid : 1537545299907468
       num_posts: 5
       width: 580
       colorscheme: light
