--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ allpages: []
 temparray: []
 temparray2: []
 cathash: {}
+bandlist: ["Oi Va Voi", "Shtetl Superstars", "Sevara Nazarkhan", "Lazlo", "Children's", "Election Song Contest", "Ofer Bashan", "Unreleased"]
 offset: 2
 
 defaults:
